fix duplicar proyectos ahora si duplica todos los datos, fix collapsar padre en anidacion de categorias vista cliente, y otros de feedback del cambio 1

--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,13 @@ button:hover{
 .disclaim{
 	position: fixed;
 	background-color: #f7991c;
-	display: block;
+	display: none;
 	vertical-align: middle;
 	width: 100%;
 	margin: 0;
 	text-align: center;
 	bottom: 0;
+	border-top: 2px solid #dedede;
 }
 
 .disclaim div{
@@ -157,6 +158,214 @@ button:hover{
 	font-size: 15px;
 	padding: 7px;
 	color: #fff;
+}
+
+.disclaim-focus{
+	/*border-bottom: 2px solid #a1ca4a !important;*/
+	border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	box-shadow: 0 0 7px rgba(63%, 79%, 29%, .5);
+
+	animation: disclaim-focus-animation 5s infinite;
+		-moz-animation: disclaim-focus-animation 5s infinite;
+		-webkit-animation: disclaim-focus-animation 5s infinite;
+		-o-animation: disclaim-focus-animation 5s infinite;
+		-ms-animation: disclaim-focus-animation 5s infinite;
+}
+
+/* #F68400 */
+@keyframes disclaim-focus-animation {
+	0% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+	25% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	30% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	40% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	50% { 
+		box-shadow: 0 0 7px rgba(96%, 52%, 0%, 1);
+		border-top: 2px solid rgba(96%, 52%, 0%, 1);
+	}
+	60% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	70% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	85% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	100% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+}
+
+@-moz-keyframes disclaim-focus-animation {
+	0% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+	25% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	30% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	40% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	50% { 
+		box-shadow: 0 0 7px rgba(96%, 52%, 0%, 1);
+		border-top: 2px solid rgba(96%, 52%, 0%, 1);
+	}
+	60% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	70% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	85% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	100% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+}
+
+@-webkit-keyframes disclaim-focus-animation {
+	0% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+	25% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	30% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	40% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	50% { 
+		box-shadow: 0 0 7px rgba(96%, 52%, 0%, 1);
+		border-top: 2px solid rgba(96%, 52%, 0%, 1);
+	}
+	60% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	70% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	85% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	100% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+}
+
+@-o-keyframes disclaim-focus-animation {
+	0% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+	25% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	30% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	40% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	50% { 
+		box-shadow: 0 0 7px rgba(96%, 52%, 0%, 1);
+		border-top: 2px solid rgba(96%, 52%, 0%, 1);
+	}
+	60% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	70% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	85% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	100% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+}
+
+@-ms-keyframes disclaim-focus-animation {
+	0% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
+	25% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	30% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	40% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	50% { 
+		box-shadow: 0 0 7px rgba(96%, 52%, 0%, 1);
+		border-top: 2px solid rgba(96%, 52%, 0%, 1);
+	}
+	60% { 
+		box-shadow: 0 0 6px rgba(96%, 52%, 0%, .5);
+		border-top: 2px solid rgba(96%, 52%, 0%, .5);
+	}
+	70% { 
+		box-shadow: 0 0 5px rgba(96%, 52%, 0%, .3);
+		border-top: 2px solid rgba(96%, 52%, 0%, .3);
+	}
+	85% { 
+		box-shadow: 0 0 4px rgba(63%, 79%, 29%, 1);
+		border-top: 2px solid rgba(63%, 79%, 29%, 1);
+	}
+	100% { 
+		box-shadow: 0 0 3px rgba(63%, 79%, 29%, .5);
+		border-top: 2px solid rgba(63%, 79%, 29%, .5);
+	}
 }
 
 /*
@@ -1403,6 +1612,7 @@ button:hover{
 	margin: 10px 10px;
 	color: #757374 !important;
 	font-size: 15px !important;
+	text-align:justify !important;
 }
 
 .dato ol{
@@ -1545,6 +1755,9 @@ button:hover{
 .box p{
 	margin: 0;
 	margin-top: 10px;
+	color: #757374 !important;
+	font-size: 15px !important;
+	text-align:justify !important;
 }
 
 .box b, .box strong{
